# Parallel-programming

./: .clang-format  algorithm.cpp  main.cpp  matrix.hpp
loops/: README.md  mpi.c  openmp.c  seq2.c  task1_omp.c  task2_mpi.c
loops/graphs/: scripts.ipynb
strassen-alg/: CMakeLists.txt  README.md
strassen-alg/include/: matrix.hpp
strassen-alg/src/: algorithm.cpp
